# dblm

./: .gitignore  README.md  design.md  pyproject.toml  pyrightconfig.json
deprecated/: demo.py  demo_2.py  prototype.py  random_graph.py  setup.py
examples/: analysis.py  dirichlet_entropy.py  error_vs_entropy.py  error_vs_variance.py  find_size.py  sampling_vs_albo_2value.py  sampling_vs_albo_subset.py  sampling_vs_albo_utils.py  variance_vs_entropy.py
examples/albo_vs_mult/: albo_vs.ipynb
examples/finetunet5/: peft-flan-t5-int8-summarization.ipynb
examples/llama/: inference.ipynb  llama_with_expected_attention.py  mixture.ipynb
examples/maxent/: maxent.ipynb
examples/noisy_log_linear_interleaved/: data.py  evaluate_entropy.py  modeling.py  train_noisy_log_linear_interleaved.py
experiments/pilot_study_1/: README.txt
experiments/pilot_study_3/ptb/: mi.py  (+4 more)
tests/: test_autoregressive_ancestral_sampling.py  test_autoregressive_log_marginals.py  test_autoregressive_x_ancestral_sampling.py  test_pilot_1_bp.py  test_pilot_1_bp_gpu.py  test_pilot_1_factory.py  test_switching_table_message_passing.py  test_tensor_bp.py  test_tensor_factor_graphs.py  test_tensor_tables.py  test_tensor_tree_log_linear_transition.py  test_tensor_tree_log_linear_transition_with_noise.py  test_tree_chain_switch.py  test_tree_log_linear_transition.py  test_tree_log_linear_transition_with_noise.py  test_tree_log_linear_transition_with_noise_one_for_each_token.py  test_tree_mrf_noisy_emission.py
tests/rva/: test_expected_attention.py  test_independent.py  test_unnormalized_attention.py
(+1551 files in other folders)
